# PiAA_Strings

./: .gitignore  README.txt
lr5/: CMakeLists.txt  README.txt
lr5/hdr/: kmpFunc.h
lr5/src/: NaiveVsKmp.cpp  all.cpp  all.sh  clean.sh  kmp.cpp  kmpFunc.cpp  shift.cpp
lr5/tests/: test.cpp
lr6/: CMakeLists.txt  README.txt
lr6/hdr/: AKfunc.hpp  helpfunc.hpp
lr6/src/: AKfunc.cpp  AKstandart.cpp  AKwithDJoker.cpp  clean.sh  helpfunc.cpp
lr6/test/: test.cpp
